adjusting view and adding static view

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>BackHomeView</title>
     <script src="jquery.js"></script>
+    <script src="configuration.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="./styles.css">
  </head>
