--- a/public/index.html
+++ b/public/index.html
@@ -8,21 +8,24 @@
     <link rel="stylesheet" href="./styles.css">
  </head>
   <body>
-    <div class="full">
-        <div class="section" id="section-1">
-            <div class="section-title">
-            </div>
-            <div class="section-divider"></div>
-            <div class="section-content">
-            </div>
-        </div>
-        <div class="section" id="section-2">
-            <div class="section-title">
-            </div>
-            <div class="section-divider"></div>
-            <div class="section-content">
-            </div>
-        </div>
+    <div class="fullcover">
+      <div class="time" id="time"></div>
+      <div class="full">
+          <div class="section" id="section-1">
+              <div class="section-title">
+              </div>
+              <div class="section-divider"></div>
+              <div class="section-content">
+              </div>
+          </div>
+          <div class="section" id="section-2">
+              <div class="section-title">
+              </div>
+              <div class="section-divider"></div>
+              <div class="section-content">
+              </div>
+          </div>
+      </div>
     </div>
   </body>
 </html>
