--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>BackHomeView</title>
     <script src="jquery.js"></script>
+    <script src="dayjs.js"></script>
     <script src="configuration.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="./styles.css">
@@ -12,18 +13,32 @@
       <div class="time" id="time"></div>
       <div class="full">
           <div class="section" id="section-1">
-              <div class="section-title">
-              </div>
+              <div class="section-title"></div>
               <div class="section-divider"></div>
-              <div class="section-content">
+              <div class="section-content"></div>
+              <div class="section-date"></div>
+              <div class="section-upcoming">
+                <div class="upcoming upcoming-1"></div>
+                <div class="upcoming upcoming-2"></div>
+                <div class="upcoming upcoming-3"></div>
+                <div class="upcoming upcoming-4"></div>
+                <div class="upcoming upcoming-5"></div>
+                <div class="upcoming upcoming-6"></div>
               </div>
           </div>
           <div class="section" id="section-2">
-              <div class="section-title">
-              </div>
-              <div class="section-divider"></div>
-              <div class="section-content">
-              </div>
+            <div class="section-title"></div>
+            <div class="section-divider"></div>
+            <div class="section-content"></div>
+            <div class="section-date"></div>
+            <div class="section-upcoming">
+              <div class="upcoming upcoming-1"></div>
+              <div class="upcoming upcoming-2"></div>
+              <div class="upcoming upcoming-3"></div>
+              <div class="upcoming upcoming-4"></div>
+              <div class="upcoming upcoming-5"></div>
+              <div class="upcoming upcoming-6"></div>
+            </div>
           </div>
       </div>
     </div>
